--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,11 @@ header{
 #root {
   max-width: auto;
 }
+
+.bg-gradient-to-r {
+  background: linear-gradient(to right, transparent, rgba(255, 255, 255, 0.8));
+}
+
+.to-blur {
+  backdrop-filter: blur(10px); /* Adjust the blur strength as needed */
+}
